refactoring. Adding makeCalendar(data, container) global function

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -54,6 +54,7 @@
         
         <script src="bower_components/d3/d3.js" defer> </script>
         <script src="d3calendar.js" defer> </script>
+        <script src="main.js" defer> </script>
         
         <script>
             document.addEventListener('DOMContentLoaded', function(){
