--- a/presentation/index.html
+++ b/presentation/index.html
@@ -14,8 +14,8 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<link rel="stylesheet" href="css/reveal.min.css">
-		<link rel="stylesheet" href="css/theme/simple.css" id="theme">
+		<link rel="stylesheet" href="css/reveal.css">
+		<link rel="stylesheet" href="css/octicon.css">
 		<link rel="stylesheet" href="css/github.css">
 
 		<!-- For syntax highlighting -->
@@ -44,26 +44,46 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>6element</h1>
-					<h3>L'open-innovation au service de la gestion des déchets</h3>
-					<p>
-						<small>Un projet open-source par <a href="http://anthill.github.io/">ANTS</a></small>
-					</p>
+
+					<h1 class="hidden">Preroll</h1>
+					<h2 class="hidden">Preroll</h2>
+					<div class="clear-all"></div>
+					<img width="100%"
+								height="100%"
+								src="../img/ants_name.png"
+								></img>
+					<hr />
+					<h1 contenteditable>L'open-innovation des déchets</h1>
+					<div><small>Un projet open-source par <a href="http://anthill.github.io/">ANTS</a></small></div>
+
 				</section>
 
 				<section>
+					<section>
 					<h2>ANTS</h2>
 					<p>
 						ANTS est un laboratoire d'innovation qui a pour objectif de 
 					</p>
-
+					</section>
+					<section>
+					<h2>ANTS</h2>
+					<p>
+						Alexandre Vallette 
+					</p>
+					</section>
+					<section>
+					<h2>ANTS</h2>
+					<p>
+						David Bruant
+					</p>
+					</section>
 				</section>
 
 				<section>
 					<section>
 						<h2>Contexte</h2>
 						<p>
-							Chaque mois le nord de la Gironde produit une tour Eiffeil de déchèts qui sont ... enterrés
+							Chaque mois le nord de la Gironde produit une tour Eiffeil de déchèts...
 						</p>
 					</section>
 					<section>
