--- a/presentation/index.html
+++ b/presentation/index.html
@@ -14,9 +14,7 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/octicon.css">
-		<link rel="stylesheet" href="css/github.css">
+		<link rel="stylesheet" href="css/ants.css">
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -45,26 +43,24 @@
 			<div class="slides">
 				<section>
 
-					<h1 class="hidden">Preroll</h1>
-					<h2 class="hidden">Preroll</h2>
 					<div class="clear-all"></div>
-					<img width="100%"
-								height="100%"
-								src="../img/ants_name.png"
-								></img>
+					<h1>6element</h1>
 					<hr />
-					<h1 contenteditable>L'open-innovation des déchets</h1>
-					<div><small>Un projet open-source par <a href="http://anthill.github.io/">ANTS</a></small></div>
+					<h2 contenteditable>L'open-innovation des déchets</h1>
+					<br /><br />
+					<h6>Un projet open-source par <a href="http://anthill.github.io/">ANTS</a></h6>
 
 				</section>
 
 				<section>
 					<section>
-					<h2>ANTS</h2>
-					<p>
-						ANTS est un laboratoire d'innovation qui a pour objectif de 
-					</p>
+
+						<div class="clear-all"></div>
+						<h1>ANTS</h1>
+						<hr />
+						<h3 contenteditable>Laboratoire d'open-innovation</h1>
 					</section>
+
 					<section>
 					<h2>ANTS</h2>
 					<p>
@@ -106,6 +102,13 @@
 					</section>
 				</section>
 
+				<section>
+					<!-- <iframe id="map" src="http://anthill.github.io/6element/dashboard/" width="455" height="356" style="margin:0;overflow:hidden;border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen> </iframe> -->
+
+					<div class="stretch">
+  						<iframe src="http://anthill.github.io/6element/dashboard/" height="100%" width="100%" allowfullscreen></iframe>
+					</div>
+				</section>
 
 				<section>
 					<section>
