--- a/presentation/index.html
+++ b/presentation/index.html
@@ -41,116 +41,145 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
+				<!-- Premiere de couv + presentation de ANTS -->
 				<section>
 
-					<div class="clear-all"></div>
-					<h1>6element</h1>
-					<hr />
-					<h2 contenteditable>L'open-innovation des déchets</h1>
-					<br /><br />
-					<h6>Un projet open-source par <a href="http://anthill.github.io/">ANTS</a></h6>
+					<section>
 
-				</section>
+						<div class="clear-all"></div>
+						<h1>6element</h1>
+						<hr />
+						<h2 contenteditable>L'open-innovation des déchets</h1>
+						<br /><br />
+						<h6>Un projet open-source par <a href="http://anthill.github.io/">ANTS</a></h6>
 
-				<section>
+					</section>
 					<section>
 
 						<div class="clear-all"></div>
 						<h1>ANTS</h1>
 						<hr />
 						<h3 contenteditable>Laboratoire d'open-innovation</h1>
+
+					</section>
+					<section>
+
+					<h2>People</h2>
+		                <ul class="people table-layout">
+		                    <li>
+		                        <img src="https://avatars.githubusercontent.com/u/371303?">
+		                        <div>
+		                            <span class="name">Alexandre Vallette</span>
+		                            <span class="bio">Phd in theoretical physics, co-founder of SNIPS, he is a <strong>data-scientist</strong> specialized in machine-learning applied to spatial data and graphs. <strong>Open-data</strong> enthousiast, he is commited to show how open-innovation can lead to a better governance and economy.</span>
+		                        </div>
+		                    <li>
+		                        <img src="https://avatars.githubusercontent.com/u/165829?">
+		                        <div>
+		                            <span class="name">David Bruant</span>
+		                            <span class="bio">David is a leader in <strong>front-end </strong>development, especially in javascript and standards specification. Contributor to Mozilla, he believes deeply in open web and open source. He teaches coding to young children and <strong>datavisualization</strong> in design schools.</span>
+		                        </div>
+		                        
+		                </ul>
+					</section>
+					<section>
+						what is open innovation
 					</section>
 
-					<section>
-					<h2>ANTS</h2>
-					<p>
-						Alexandre Vallette 
-					</p>
-					</section>
-					<section>
-					<h2>ANTS</h2>
-					<p>
-						David Bruant
-					</p>
-					</section>
 				</section>
 
+				<!-- context -->
 				<section>
+					<!-- intro -->
 					<section>
-						<h2>Contexte</h2>
-						<p>
-							Chaque mois le nord de la Gironde produit une tour Eiffeil de déchèts...
-						</p>
-					</section>
-					<section>
-						<h2>Le problème 1</h2>
+
 						<ul>
-							<li>No order here</li>
-							<li>Or here</li>
-							<li>Or here</li>
-							<li>Or here</li>
+							<li>image 5 element: this guy is real cool because he discovered the 5th element: he showed us that beyond the fire that warms us, the air that we breath, the water we drink, the earth we build upon, there was a 5th element and this element is love that ties us to each other. Waow.
+							</li>
+							<li> image d'un eboueur: yet this guy is even cooler because he makes sur that the our garbage are taken car of. And not only garbage has a deep connection with other 5 elements (it stinks, and polutes water so much that we either burn it or dump in the ground) but it is the 6element because we might produce more of it that love.
+							</li>
+							<li>
+								<ol>
+									<li> one tone per person every year </li>
+									<li> the equivalent of the eiffel tower </li>
+									<li> ... </li>
+								</ol>
+							</li>
 						</ul>
 					</section>
+					<!-- recycling works -->
 					<section>
-						<h2>Conseillers sur le projet:</h2>
-						<ol>
-							<li>Olivier de Morgeat</li>
-							<li>Xavier Corval</li>
-							<li>Jean Karinthi</li>
-							<li>...</li>
-						</ol>
+						photo du centre de tri des balles de bouteilles <br/>
+						photo de nouvelles techs de recyclage<br/>
+						photo de la machine d'incinération
 					</section>
+					<!-- how to explain that we have to landfill or burn -->
+					<section>
+						2 sources: collecte + decheterie <br/>
+						dans les deux cas il y a tant de pourcent qui sont mal trié
+					</section>
+					<!-- revenons sur la decheterie -->
+					<section>
+						cente de recyclage ou decheterie<br/>
+						qu'est-ce qui fait que les dechets sont mal triés
+					</section>
+					<section>
+						pressé parce qu'on a attendu 3h<br/>
+						parce qu'on s'est fait refoulé d'une autre de décheterie<br/>
+						parce que le lieu rend mal à l'aise<br/>
+						parce que la benne est pleine et qu'on ne va pas repartir avec
+					</section>				
 				</section>
 
+				<!-- objectif du projet -->
 				<section>
-					<!-- <iframe id="map" src="http://anthill.github.io/6element/dashboard/" width="455" height="356" style="margin:0;overflow:hidden;border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen> </iframe> -->
+					<ul>
+						<li>fluidifier l'acces au decheteries</li>
+						<li>créer une plateforme d'economie circulaire</li>
+						<li>démonter la valeur de l'open-innovation</li>
+					</ul>
+				</section>	
 
-					<div class="stretch">
-  						<iframe src="http://anthill.github.io/6element/dashboard/" height="100%" width="100%" allowfullscreen></iframe>
-					</div>
-				</section>
-
+				<!-- etapes du projet -->
 				<section>
+					<!-- le cercle vertueux de l'open-data -->
 					<section>
-						<h2>Objectif numero 1</h2>
-						<p>
-							Générer de la donnée propre sur les déchets afin de de comprendre les flux et ...
-						</p>
-						<h2>Solution</h2>
-						<ul>
-							<li>Capteurs</li>
-							<li>Modèle</li>
-							<li>Optimisation pour les collectivités</li>
-							<li>App grand public</li>
-						</ul>
+						il est difficile pour les acteurs de se rendre compte de la valeur des données<br/>
+						peur d'ouvrir une donnée qui aurait de la valeur <br/>
+						pas de compétences en interne pour les exploiter <br/>
+						une seule réponse ouverture<br/>
+						stimulée par de l'open-source
 					</section>
 					<section>
-						<h2>Objectif numéro 2</h2>
-						<p>
-							Créer une plateforme numérique d'économie circulaire
-						</p>
-						<ul>
-							<li>app</li>
-							<li>réseau crowdsourcé de réutilisateurs</li>
-						</ul>
-						difficultés: qualifier les données pour les utilisateurs
-						avantages: - les collectivité montrent l'exemple de Responsabilité Sociales des Entreprises
-							- developement durable
-							- solidarité / création d'emploi
-							- création de valeur
+						image du cercle vertuexu
 					</section>
 					<section>
-						<h2>Objectif numéro 3</h2>
-						<p>
-							Démontrer l'intérêt de l'open-innovation pour les territoires
-						</p>
-						<ul>
-							<li>usage d'open-data</li>
-							<li>cercle vertueux de l'open-source</li>
-							<li>fablab</li>
-						</ul>
+						<div class="stretch">
+	  						<iframe src="http://anthill.github.io/6element/dashboard/" height="100%" width="100%" allowfullscreen></iframe>
+						</div>
 					</section>
+					<!-- produire de la données -->
+					<section>
+						definition du hacker
+					</section>
+					<section>
+						solution existantes et prix 
+					</section>
+					<section>
+						open-hardware et fablab<br/>
+						i'm a maker: bike
+					</section>
+					<section>
+						raspberry pi arduino et compagnie
+					</section>
+					<section>
+						schema d'une installation<br/>
+						cout
+					</section>
+					<!-- modelisation contextuelle -->
+
+
 				</section>
+
 
 
 			</div>
