added title and reformulated a bit

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -167,7 +167,7 @@
         <script src="src/populateMap.js" defer> </script>
         <script src="src/main.js" defer> </script>
 
-        <title> TITLE </title>
+        <title> 6element </title>
     </head>
 
     <!--
@@ -181,8 +181,8 @@
         </div>
         <div id="info">
             <p>Chaque rond correspond à une déchèterie.
-            <p><span class="full">Rouge</span> signifie qu'il est prévu que la déchèterie est très chargée aujourd'hui. 
-            <p><span class="empty">Vert</span> signifie qu'il est prévu que la déchèterie n'est pas très chargée aujourd'hui.
+            <p><span class="full">Rouge</span> : beaucoup d'affluence prévue aujourd'hui. 
+            <p><span class="empty">Vert</span> : la déchèterie n'est pas très chargée aujourd'hui.
             <p>Cliquer sur une déchèterie pour voir l'affluence historique ainsi que les prédictions pour les jours à venir.
         </div>
         <div class="overlay" hidden>
