--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -182,8 +182,8 @@
         <div id="info">
             <p>Chaque rond correspond à une déchèterie.
             <p><span class="full">Rouge</span> : beaucoup d'affluence prévue aujourd'hui. 
-            <p><span class="empty">Vert</span> : la déchèterie n'est pas très chargée aujourd'hui.
-            <p>Cliquer sur une déchèterie pour voir l'affluence historique ainsi que les prédictions pour les jours à venir.
+            <p><span class="empty">Vert</span> : la déchèterie n'est pas très chargée.
+            <p>Cliquez sur une déchèterie pour voir l'affluence historique ainsi que les prédictions pour les jours à venir.
         </div>
         <div class="overlay" hidden>
             <div class="calendar">
