--- a/presentation/index.html
+++ b/presentation/index.html
@@ -63,7 +63,7 @@
 
 					</section>
 					<section>
-		                <ul class="people table-layout">
+		                <ul class="inline-list">
 		                    <li>
 		                        <img src="https://avatars.githubusercontent.com/u/371303?">
 		                        <div>
@@ -113,12 +113,13 @@
 
 						</aside>
 					</section>
-					
+	
 					<section>
 						image d'une tonne de déchèts
 						<aside class="notes">
 							Vous ne me croyez pas ? Voila ce que chacun produit en une année.
 						</aside>
+					</section>
 					<section>
 						carte du monde qui zoom sur le petit petit bout du nord de la gironde.
 						<aside class="notes">
@@ -164,7 +165,6 @@
 						mockup
 					</section>
 				</section>
-				<section>
 
 				<!-- open-data et modélisation contextuelle -->
 				<section>
@@ -199,16 +199,8 @@
 						open-hardware et fablab
 					</section>
 					<section>
-					 
-					</section>
-					<section>
 						solution existantes et prix 
-					</section>
-					<section>
-						<div class="stretch">
-	  						<iframe src="http://anthill.github.io/6element/dashboard/" height="100%" width="100%" allowfullscreen></iframe>
-						</div>
-					</section>
+					</section>	
 
 				</section>
 
