--- a/presentation/index.html
+++ b/presentation/index.html
@@ -159,7 +159,7 @@
 
 						<li><strong>predict demand</strong></li>
 						<li><strong>provide an application</strong></li>
-						<li><strong>connect to re-users</strong></li>
+						<li><strong>connect to reusers</strong></li>
 					</ol>
 				</section>
 				<section data-background="img/predict2.jpg">
@@ -173,7 +173,7 @@
 				<section>
 					<br/><br/><br/><br/>
 					<h2><font color="black">3) Crowdsourcing</font></h2><br/><br/><br/>
-					Finally some precise data about waste production and re-use.
+					Finally some precise data about waste production and reuse.
 				</section>
 
 				<!-- sensor -->
@@ -191,16 +191,17 @@
 						<li><strong>improvable</strong></li>
 					</ol>
 				</section>
-				<section data-background="img/cars.jpg">
-				</section>
-				<section data-background="img/notcars.jpg">
-				</section>
 				<section>
 					<h3>Counting the number of cars</h3><br/><br/><br/>
 					<img src="img/car_detection1.jpg">
 				</section>
+				<section data-background="img/cars.jpg">
+				</section>
+				<section data-background="img/notcars.jpg">
+				</section>
+
 				<section>
-					<h3>Estimating the level of each bin</h3><br/><br/><br/>
+					<h3>The level of each container</h3><br/><br/><br/>
 					<img src="img/bin1.png" height="150">&nbsp;&nbsp;<h2>&#8594;</h2>&nbsp;&nbsp;<img src="img/bin2.png" width="100">&nbsp;&nbsp;<h2>&#8594;</h2>&nbsp;&nbsp;<h2>4</h2>
 				</section>
 				<section>
