moved to plotly

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -206,7 +206,10 @@
 				</section>
 				<section>
 					<h3>Realtime monitoring</h3><br/>
-					<img src="img/garideche.png" height="700">
+
+					<div class="stretch">
+ 	  						<iframe src="https://plot.ly/~vallettea/13/560/420" frameborder="0" seamless="seamless" scrolling="no" height="100%" width="100%" allowfullscreen></iframe>
+						</div>
 				</section>
 
 
