random markers with colored are on the map

--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
 
 
 
-    <script defer src="app.js">
+    <script defer src="browserify-bundle.js">
     </script>
 
     <title> Ants - 6element </title>
