client_app.js in 6element/app

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" href="css/icons/flaticon.css">
     <!--<link rel="stylesheet" type="text/css" href="./css/icons/flaticon.css">-->
 
-    <script defer src="browserify-bundle.js">
+    <script defer src="client_app.js">
     </script>
 
     <title> Ants - 6element </title>
