--- a/app/clients/Map/index.html
+++ b/app/clients/Map/index.html
@@ -5,20 +5,20 @@
     <meta charset="utf-8">
 
     <meta name='viewport' content='initial-scale=1' />
-    <link href="css/leaflet.css" rel="stylesheet">
-    <link href="css/default.css" rel="stylesheet">
-    <link href="css/panel.css" rel="stylesheet">
-    <link href="css/markers.css" rel="stylesheet">
-    <link href="css/map.css" rel="stylesheet">
-    <link href="css/cal-heatmap.css" rel="stylesheet">
+    <link href="leaflet.css" rel="stylesheet">
+    <link href="/_common/css/normalize.css" rel="stylesheet">
+    <link href="/_common/css/default.css" rel="stylesheet">
+    <link href="/Map/css/panel.css" rel="stylesheet">
+    <link href="/Map/css/markers.css" rel="stylesheet">
+    <link href="/Map/css/map.css" rel="stylesheet">
 
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
 
-    <link rel="stylesheet" type="text/css" href="css/icons/flaticon.css">
+    <link rel="stylesheet" type="text/css" href="Map/css/icons/flaticon.css">
     <!--<link rel="stylesheet" type="text/css" href="./css/icons/flaticon.css">-->
 
-    <script defer src="client_app.js">
+    <script defer src="Map_app.js">
     </script>
 
     <title> Ants - 6element </title>
