--- a/app/clients/Admin/index.html
+++ b/app/clients/Admin/index.html
@@ -12,9 +12,9 @@
 
         <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
-        <script defer src="../Admin_app.js"></script>
+        <script defer src="/Admin_app.js"></script>
 
-        <title> Ants - 6element App - Sketch </title>
+        <title> Ants - 6element Admin </title>
 
         <script data-polyfill>
             if (!String.prototype.startsWith) {
