--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name='viewport' content='initial-scale=1' />
         <link href="css/normalize.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
         <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
