--- a/app/clients/Map/index.html
+++ b/app/clients/Map/index.html
@@ -13,6 +13,7 @@
     <link href="/Map/css/map.css" rel="stylesheet">
 
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <script type="text/javascript" src="/dygraph-combined.js"></script>
 
 
     <link rel="stylesheet" type="text/css" href="Map/css/icons/flaticon.css">
