--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 
     <head>
         <meta charset="utf-8">
-
-        <meta name='viewport' content='initial-scale=1' />
+        <meta name='viewport' content='initial-scale=1' />        
+        <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        
+        
         <link href="css/normalize.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+        <link href= "node_modules/bootstrap/dist/css/bootstrap.min.css" rel = "stylesheet">        
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
-        <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
         <script defer src="app.js"></script>
 
@@ -66,6 +69,10 @@
     </head>
 
     <body>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     </body>
 
 </html>
