everything seems to be working well enough after the Map => App renamming

--- a/app/clients/App/index.html
+++ b/app/clients/App/index.html
@@ -8,9 +8,9 @@
     <link href="leaflet.css" rel="stylesheet">
     <link href="/_common/css/normalize.css" rel="stylesheet">
     <link href="/_common/css/default.css" rel="stylesheet">
-    <link href="/Map/css/panel.css" rel="stylesheet">
-    <link href="/Map/css/markers.css" rel="stylesheet">
-    <link href="/Map/css/map.css" rel="stylesheet">
+    <link href="/App/css/panel.css" rel="stylesheet">
+    <link href="/App/css/markers.css" rel="stylesheet">
+    <link href="/App/css/map.css" rel="stylesheet">
 
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script type="text/javascript" src="/dygraph-combined.js"></script>
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css" href="Map/css/icons/flaticon.css">
     <!--<link rel="stylesheet" type="text/css" href="./css/icons/flaticon.css">-->
 
-    <script defer src="Map_app.js">
+    <script defer src="App-browserify-bundle.js">
     </script>
 
     <title> Ants - 6element </title>
