beginning of activity screen

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <link href="css/application.css" rel="stylesheet">
         <link href="css/tabs.css" rel="stylesheet">
         <link href="css/home.css" rel="stylesheet">
+        <link href="css/activity.css" rel="stylesheet">
         
         
         <title>6element App - Sketch - Ants</title>
