--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
         <link href="css/tabs.css" rel="stylesheet">
         <link href="css/home.css" rel="stylesheet">
         <link href="css/activity.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet"> <!-- je le remets pour linstant -->
+        <link href="css/post-ad.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet"> <!-- je le remets pour l'instant (pour les composants de la page déchèterie) -->
         
         
         <title>6element App - Sketch - Ants</title>
