roughly adapting to screen size

--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
         <link href="css/home.css" rel="stylesheet">
         <link href="css/activity.css" rel="stylesheet">
         <link href="css/post-ad.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet"> <!-- je le remets pour l'instant (pour les composants de la page déchèterie) -->
-        
+        <link href="css/recycling-center.css" rel="stylesheet"> 
         
         <title>6element App - Sketch - Ants</title>
 
