--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         <link href="css/activity.css" rel="stylesheet">
         <link href="css/post-ad.css" rel="stylesheet">
         <link href="css/recycling-center.css" rel="stylesheet"> 
+        <link href="css/search-results.css" rel="stylesheet"> 
         
         <title>6element App - Sketch - Ants</title>
 
