added a fake tcp pusher

--- a/core/clients/App/index.html
+++ b/core/clients/App/index.html
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="/dygraph-combined.js"></script>
 
 
-    <link rel="stylesheet" type="text/css" href="Map/css/icons/flaticon.css">
+    <link rel="stylesheet" type="text/css" href="App/css/icons/flaticon.css">
     <!--<link rel="stylesheet" type="text/css" href="./css/icons/flaticon.css">-->
 
     <script defer src="App-browserify-bundle.js">
