--- a/core/clients/Admin/index.html
+++ b/core/clients/Admin/index.html
@@ -8,7 +8,9 @@
         
         <link href="/_common/css/normalize.css" rel="stylesheet">
         <link href="/_common/css/default.css" rel="stylesheet">
-        <link href="/Admin/css/style.css" rel="stylesheet">
+        <link href="/Admin/css/other.css" rel="stylesheet">
+        <link href="/Admin/css/placePanel.css" rel="stylesheet">
+        <link href="/Admin/css/sensorPanel.css" rel="stylesheet">
 
         <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
