--- a/core/clients/Admin/index.html
+++ b/core/clients/Admin/index.html
@@ -11,6 +11,7 @@
         <link href="/Admin/css/placePanel.css" rel="stylesheet">
         <link href="/Admin/css/sensorPanel.css" rel="stylesheet">
         <link href="/Admin/css/deleteButton.css" rel="stylesheet">
+        <link href="/Admin/css/creator.css" rel="stylesheet">
         <link href="/Admin/css/other.css" rel="stylesheet">
 
         <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
