--- a/core/clients/Dashboard/index.html
+++ b/core/clients/Dashboard/index.html
@@ -8,9 +8,9 @@
     <link href="leaflet.css" rel="stylesheet">
     <link href="/_common/css/normalize.css" rel="stylesheet">
     <link href="/_common/css/default.css" rel="stylesheet">
-    <link href="/App/css/panel.css" rel="stylesheet">
-    <link href="/App/css/markers.css" rel="stylesheet">
-    <link href="/App/css/map.css" rel="stylesheet">
+    <link href="/Dashboard/css/panel.css" rel="stylesheet">
+    <link href="/Dashboard/css/markers.css" rel="stylesheet">
+    <link href="/Dashboard/css/map.css" rel="stylesheet">
 
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script type="text/javascript" src="/dygraph-combined.js"></script>
