--- a/core/clients/Citizen/index.html
+++ b/core/clients/Citizen/index.html
@@ -74,9 +74,16 @@
                 border-collapse: collapse;
             }
         </style>
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" media="screen" href="./css/main.css" />
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato">
+        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css" />
+        <!-- Include Google Maps JS API -->
+         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCLuhubHWNbDgBhmj61OUo07L-zjHsVkKw&libraries=places"></script>
         
         <link href="css/normalize.css" rel="stylesheet">
-        <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">        
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
         
         <link href="css/application.css" rel="stylesheet">
