removed http for index.html

--- a/core/clients/Citizen/src/index.html
+++ b/core/clients/Citizen/src/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
     <link rel="stylesheet" media="screen" href="./css/main.css" />
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato">
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato">
+    <link href="css/leaflet.css" rel="stylesheet">
     <!-- Include Google Maps JS API -->
      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCLuhubHWNbDgBhmj61OUo07L-zjHsVkKw&libraries=places"></script>
     <script defer src="Citizen-browserify-bundle.js"></script>
