--- a/core/clients/Citizen/src/index.html
+++ b/core/clients/Citizen/src/index.html
@@ -1,22 +1,17 @@
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta content="" name="6Element POC" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="" name="6Element" />
     <title>6Element | POC</title>
-    <!--<script defer src="https://fb.me/react-with-addons-0.13.3.js"></script>
-    <script defer src="https://fb.me/JSXTransformer-0.13.3.js"></script>
-    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script defer src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
-    <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>-->
+    <!--<script src="./node_modules/jquery/dist/jquery.min.js"></script>-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" media="screen" href="./css/main.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato">
-    <link href="css/leaflet.css" rel="stylesheet">
-    <!-- Include Google Maps JS API -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCLuhubHWNbDgBhmj61OUo07L-zjHsVkKw&libraries=places"></script>
+    <link rel="stylesheet" media="screen" href="/css/material.css" />
+    <link rel="stylesheet" media="screen" href="/css/leaflet.css" />
+    <link rel="stylesheet" media="screen" href="/css/main.css" />
     <script>
       // Production steps of ECMA-262, Edition 6, 22.1.2.1
       // Référence : https://people.mozilla.org/~jorendorff/es6-draft.html#sec-array.from
@@ -93,7 +88,8 @@
             return A;
           };
         }());
-        if (!Array.prototype.findIndex) {
+      }
+      if (!Array.prototype.findIndex) {
           Array.prototype.findIndex = function(predicate) {
             if (this == null) {
               throw new TypeError('Array.prototype.findIndex appelé sur null ou undefined');
@@ -115,7 +111,6 @@
             return -1;
           };
         }
-      }
     </script>
     <script defer src="Citizen-browserify-bundle.js"></script>
   </head>
