update detailed sheet

--- a/core/clients/Citizen/src/index.html
+++ b/core/clients/Citizen/src/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="" name="6Element" />
-    <title>6Element | POC</title>
+    <title>6Element</title>
     <!--<script src="./node_modules/jquery/dist/jquery.min.js"></script>-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
