--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" media="screen" href="/css/leaflet.css" />
     <link rel="stylesheet" media="screen" href="/css/main.css" />
     <link rel="stylesheet" media="screen" href="/css/L.Icon.Pulse.css" />
-    <script defer src="Citizen-browserify-bundle.js"></script>
+    <script defer src="browserify-bundle.js"></script>
   </head>
   <body>
   </body>
