missing dependencies + Material-UI update + remove all warningd

--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,12 @@
     <title>6Element</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato">
-    <link rel="stylesheet" media="screen" href="/css/material/material.css" />
     <link rel="stylesheet" media="screen" href="/css/leaflet.css" />
     <link rel="stylesheet" media="screen" href="/css/main.css" />
     <link rel="stylesheet" media="screen" href="/css/L.Icon.Pulse.css" />
     <script defer src="browserify-bundle.js"></script>
   </head>
   <body>
+    <div id="reactHere"></div>
   </body>
 </html>
