charts switched from canvas to plotly

--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,19 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="" name="6Element" />
-    <title>6Element</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato">
-    <link rel="stylesheet" media="screen" href="/css/leaflet.css" />
-    <link rel="stylesheet" media="screen" href="/css/main.css" />
-    <link rel="stylesheet" media="screen" href="/css/L.Icon.Pulse.css" />
-    <script defer src="browserify-bundle.js"></script>
-  </head>
-  <body>
-    <div id="reactHere"></div>
-  </body>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta content="" name="6Element" />
+		<title>6Element</title>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato">
+		<link rel="stylesheet" media="screen" href="/css/leaflet.css" />
+		<link rel="stylesheet" media="screen" href="/css/main.css" />
+		<link rel="stylesheet" media="screen" href="/css/L.Icon.Pulse.css" />
+		<script defer src="browserify-bundle.js"></script>
+		<script defer src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+	</head>
+	<body>
+		<div id="reactHere"></div>
+	</body>
 </html>
