added detailed view url, buggy

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,9 @@
 		<link rel="stylesheet" media="screen" href="/css/leaflet.css" />
 		<link rel="stylesheet" media="screen" href="/css/main.css" />
 		<link rel="stylesheet" media="screen" href="/css/L.Icon.Pulse.css" />
-		<script defer src="browserify-bundle.js"></script>
+		<script defer src="/bundle/browserify-bundle.js"></script>
 		<script defer src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+		<script id="init-data" type="application/json"></script>
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
