closing tags properly matters

--- a/client/index.html
+++ b/client/index.html
@@ -42,7 +42,7 @@
 							Visualisez son affluence en direct.<br/>
 							Suivez la disponibilité de ses bennes.
 						</p>
-						<div class="background">
+                        <div class="background"></div>
 					</div>
 				</div>
 			</div>
