style fixes + alternatives page

--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,7 @@
 	<body>
 		<header>
 			<div class="adapt-width">
+                <a href="alternatives.html">Alternatives</a>
 				<form id="searchbar"> 
 					<input type="text" id="where-input" placeholder="adresse, ville, code postal"/>
 				</form>
