--- a/client/alternatives.html
+++ b/client/alternatives.html
@@ -14,6 +14,10 @@
 		<script defer src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCLuhubHWNbDgBhmj61OUo07L-zjHsVkKw"></script>
         <script defer src="./js/lib/leaflet.js"></script>
         
+        <script defer src="js/createFilterList.js"></script>
+        <script defer src="js/createMap.js"></script>
+        <script defer src="js/displayPlaces.js"></script>
+        <script defer src="js/findPlaces.js"></script>
         <script defer src="js/main-alternatives.js"></script>
         
 		<script>
@@ -25,7 +29,7 @@
 			ga('send', 'pageview', location.pathname);
 		</script>
 	</head>
-	<body>
+	<body class="alternatives">
 		<header>
 			<div class="adapt-width">
 				<a id="back" href="/"><img src='./img/back.svg'/></a>
@@ -36,6 +40,7 @@
 		</header>
 		<main>
             <div id="map"></div>
+            <div id="filters"></div>
         </main>
 	</body>
 </html>
