alternatives menu + plug search on alternatives

--- a/client/alternatives.html
+++ b/client/alternatives.html
@@ -19,6 +19,7 @@
         <script defer src="js/displayPlaces.js"></script>
         <script defer src="js/findPlaces.js"></script>
         <script defer src="js/main-alternatives.js"></script>
+		<script defer src="js/location.js"></script>
         
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -32,7 +33,7 @@
 	<body class="alternatives">
 		<header>
 			<div class="adapt-width">
-				<a id="back" href="/"><img src='./img/back.svg'/></a>
+				<a id="back" href="menuAlter.html"><img src='./img/back.svg'/></a>
 				<form id="searchbar"> 
 					<input type="text" id="where-input" placeholder="adresse, ville, code postal"/>
 				</form>
