--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta content="" name="6Element" />
-		<title>6Element</title>
+		<meta content="" name="6element" />
+		<title>6element</title>
 		<link rel="stylesheet" media="screen" href="./css/main.css" />
 		<script defer type="text/javascript"
 		  src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCLuhubHWNbDgBhmj61OUo07L-zjHsVkKw">
@@ -23,7 +23,7 @@
 	<body>
 		<header>
 			<div class="adapt-width">
-                <a href="alternatives.html">Alternatives</a>
+               	<a id="logo" href="/">6element</a>
 				<form id="searchbar"> 
 					<input type="text" id="where-input" placeholder="adresse, ville, code postal"/>
 				</form>
@@ -48,13 +48,13 @@
 				</div>
 			</div>
 		</article>
-		<!--<nav>
+		<nav>
 			<div class="adapt-width">
 				<div id="navigation">
-					<button class="btn-recycling-center">Déchèteries</button>
-					<button class="btn-container">Containeurs</button>
+					<button class="btn-recycling-center btn-active">Déchèteries</button>
+					<a href="menuAlter.html"><button class="btn-alternatives btn-inactive">Alternatives</button></a>
 				</div>
 			</div>
-		</nav>-->
+		</nav>
 	</body>
 </html>
