polyfill for fetch

--- a/client/alternatives.html
+++ b/client/alternatives.html
@@ -13,6 +13,7 @@
         
 		<script defer src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCLuhubHWNbDgBhmj61OUo07L-zjHsVkKw"></script>
         <script defer src="./js/lib/leaflet.js"></script>
+        <script defer src="./js/lib/fetch.js"></script>
         
         <script defer src="js/findPlaces.js"></script>
         <script defer src="js/createMap.js"></script>
