--- a/client/index.html
+++ b/client/index.html
@@ -37,13 +37,12 @@
 						<button class="btn-locate" onclick="getCurrentPosition()">A proximité</button>
 						<div id="errorposition"></div>
 					</menu>
-					<div id="mvp">
+					<div id="mvp" class="RC">
 						<p>
 							Trouvez la déchèterie la plus proche.<br/>
 							Visualisez son affluence en direct.<br/>
 							Suivez la disponibilité de ses bennes.
 						</p>
-                        <div class="background"></div>
 					</div>
 				</div>
 			</div>
