--- a/client/menuAlter.html
+++ b/client/menuAlter.html
@@ -33,16 +33,15 @@
 			<div class="adapt-width">
 				<div id="sheet">
 					<menu id="location">
-						<button class="btn-favorite" onclick="getFavorites()">Mes alternatives</button>
 						<button class="btn-locate" onclick="getCurrentPosition()">A proximité</button>
 						<div id="errorposition"></div>
 					</menu>
-					<div id="mvp">
+					<div id="mvp" class="PAV">
 						<p>
-							Consultez les alternatives à la déchèterie.<br/>
-							Point d'apport volontaire ou association,<br/> il existe sûrement une solution près de chez vous.
+							Trouvez des alternatives à la déchèterie.<br/>
+							Point d'apport volontaire ou association,<br/> 
+							il existe sûrement une solution près de chez vous.
 						</p>
-                        <div class="background"></div>
 					</div>
 				</div>
 			</div>
