--- a/client/decheteries.html
+++ b/client/decheteries.html
@@ -6,10 +6,13 @@
 		<meta content="" name="6Element" />
 		<title>6Element</title>
 		<link rel="stylesheet" media="screen" href="./css/main.css" />
+        <link rel="stylesheet" href="./css/lib/leaflet.css">
 		<script defer src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 		<script defer type="text/javascript"
 		  src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCLuhubHWNbDgBhmj61OUo07L-zjHsVkKw">
 		</script>
+        <script defer src="./js/lib/leaflet.js"></script>
+        <script defer src="./js/createMap.js"></script>
 		<script defer src="./js/location.js"></script>
 		<script defer src="./js/panels.js"></script>
 		<script defer src="./js/favorite.js"></script>
